# DataScythe

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DataScythe.py  LICENSE.md  MIGRATION.md  README.md  SECURITY.md  THREAT_MODEL.md  datascythe_clone_report_test.txt  datascythe_test_cert.txt  package.json
.github/workflows/: ci.yml  release-build.yml
apps/: CMakeLists.txt
apps/cli/: CMakeLists.txt  main.cpp
apps/gui/: CMakeLists.txt  confirmation_dialog.cpp  confirmation_dialog.h  datascythe.qrc  drive_table_model.cpp  drive_table_model.h  main.cpp  main_window.cpp  main_window.h
apps/gui/resources/: datascythe.icns  datascythe.rc
cmake/: DataScythePackaging.cmake  DeployWindows.cmake
docs/: BuildReproducability.txt  CodeSigning.txt  Confirmation.txt  DataScythe_Local_Code_Signing_2026.cer  DataScythe_Release_Signing_2026_pubkey.asc  EraseEngine.txt  FileFormat.txt  Limitations.txt  LinuxRelease.txt  OpSec.txt  PassScheduling.txt  Release_v0.1.0.txt  SHA256SUMS  SHA256SUMS.asc  TestVectors.txt  ThirdPartyNotices.txt  UserGuide.txt
platform/linux/: drive_analyzer.cpp  drive_enumerator.cpp  preflight.cpp  raw_device.cpp  secure_erase.cpp  volume_manager.cpp
platform/macos/: drive_analyzer.cpp  drive_enumerator.cpp  preflight.cpp  raw_device.cpp  secure_erase.cpp  volume_manager.cpp
platform/windows/: ads_enumerator.cpp  drive_analyzer.cpp  drive_enumerator.cpp  preflight.cpp  raw_device.cpp  secure_erase.cpp  volume_manager.cpp
releases/native/linux/: DataScythe-0.1.0-linux-amd64.tar.gz.asc
releases/native/macos/: DataScythe-0.1.0-macos-universal.tar.gz.asc  DataScythe-0.1.0-macos.tar.gz.asc
releases/native/windows/: DataScythe-0.1.0-win64.zip.asc
releases/native/windows/DataScythe-0.1.0-win64/: D3Dcompiler_47.dll.asc  DataScythe.exe.asc  Qt6Core.dll.asc  Qt6Gui.dll.asc  Qt6Network.dll.asc  Qt6Svg.dll.asc  Qt6Widgets.dll.asc  README.txt  README.txt.asc  datascythe-cli.exe.asc  dxcompiler.dll.asc  dxil.dll.asc  libgcc_s_seh-1.dll.asc  libstdc++-6.dll.asc  libwinpthread-1.dll.asc  opengl32sw.dll.asc
releases/native/windows/DataScythe-0.1.0-win64/generic/: qtuiotouchplugin.dll.asc
releases/native/windows/DataScythe-0.1.0-win64/iconengines/: qsvgicon.dll.asc
releases/native/windows/DataScythe-0.1.0-win64/imageformats/: qgif.dll.asc  qico.dll.asc  qjpeg.dll.asc  qsvg.dll.asc
releases/native/windows/DataScythe-0.1.0-win64/styles/: qmodernwindowsstyle.dll.asc
releases/native/windows/DataScythe-0.1.0-win64/tls/: qcertonlybackend.dll.asc  qschannelbackend.dll.asc
releases/native/windows/DataScythe-0.1.0-win64/translations/: qt_ar.qm.asc  qt_bg.qm.asc  qt_ca.qm.asc  qt_cs.qm.asc  qt_da.qm.asc  qt_de.qm.asc  qt_en.qm.asc  qt_es.qm.asc  qt_fa.qm.asc  qt_fi.qm.asc  qt_fr.qm.asc  qt_gd.qm.asc  qt_he.qm.asc  qt_hr.qm.asc  qt_hu.qm.asc  qt_it.qm.asc  qt_ja.qm.asc  qt_ka.qm.asc  qt_ko.qm.asc  qt_lv.qm.asc  qt_nl.qm.asc  qt_nn.qm.asc  qt_pl.qm.asc  qt_pt_BR.qm.asc  qt_ru.qm.asc  qt_sk.qm.asc  qt_tr.qm.asc  qt_uk.qm.asc  qt_zh_CN.qm.asc  qt_zh_TW.qm.asc
scripts/: generate_code_signing_cert.ps1  generate_sha256sums.py  gpg-keygen-batch.txt  hide_gnupg_release.ps1  prepare_release_assets.ps1  regenerate_pgp_key.ps1  sign_code.ps1  sign_release_assets.ps1
src/: CMakeLists.txt
src/core/: certificate.cpp  certificate.h  clone_report.cpp  clone_report.h  drive_clone_engine.cpp  drive_clone_engine.h  erase_config.h  erase_engine.cpp  erase_engine.h  erase_result.h  logger.cpp  logger.h  partition_table.cpp  partition_table.h  pass_scheduler.cpp  pass_scheduler.h  path_collector.cpp  path_collector.h  pattern_generator.cpp  pattern_generator.h  preflight.h  preflight_format.cpp  sha256.cpp  sha256.h  verification.cpp  verification.h  version.h
src/platform/: ads_enumerator.h  ads_enumerator_stub.cpp  drive_analyzer.h  drive_enumerator.h  drive_info.h  nvme_admin.h  platform_factory.cpp  raw_device.h  secure_erase.h  volume_manager.h
tests/: CMakeLists.txt  test_core.cpp
tests/release-harness/: linux-release-harness.sh  run-release-harness.py  windows-release-harness.ps1
